# hydra-genetics

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  __init__.py  mkdocs.yml  pyproject.toml  release-please-config.json  requirements.test.txt  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conventional-prs.yml  main.yaml  release-please.yaml  release.yaml  test-app-token.yaml  test-build-for-pip.py  test-build-for-pip.yaml  test-build-mkdocs.yaml  testrun-commands.yaml
.tests/integration/: columns_added_to_tsv_files.json  samples_and_settings.json
.tests/integration/ont_bams/: test_ont_with_alias.bam  test_ont_without_alias.bam
.tests/integration/pacbio_bams/: columns_added_to_tsv_files.json  m84010_220919_232145_s1.hifi_reads.bam  m84010_220919_232145_s1.hifi_reads.bam.bai  m84010_220919_235306_s2.hifi_reads.bam  m84011_220902_175841_s1.hifi_reads.bam  samples_and_settings.json
docs/: config.md  create.md  create_sample_files.md  environment.md  extra.css  index.md  modules.md  profile.md  requirements.txt  results.md  rules.md  simple_pipeline.md  standards.md  testing.md
docs/development/: help_code.md  input_functions.md  testing.md
docs/make_pipeline/: import.md
docs/packaging_pipeline/: package_pipeline.md  prepare_pipeline.md  unpack_pipeline.md
docs/tutorials/: simple_pipeline.md
hydra_genetics/: __init__.py  __main__.py  _version.py  exceptions.py  utils.py
hydra_genetics/commands/: __init__.py  create.py  prep_pipeline_env.py  references.py
hydra_genetics/pipeline-template/: .gitignore  README.md  mkdocs.yaml  requirements.txt
hydra_genetics/rule-template/: config.schema.yaml  resources.schema.yaml  rules.schema.yaml  skeleton_rule.smk  softwares.md
hydra_genetics/skeleton-rule/: new_rule.smk
hydra_genetics/utils/: __init__.py  misc.py  resources.py  samples.py  software_versions.py  units.py
hydra_genetics/utils/io/: chr.py  (+6 more)
tests/commands/: test_create_long_read.py
tests/utils/: test_misc.py  test_pipeline_version.py  test_resources.py  test_samples.py  test_software_versions.py  test_units.py
(+80 files in other folders)
